Rework Reform War Start

--- a/toi/localisation/events_l_english.yml
+++ b/toi/localisation/events_l_english.yml
@@ -1772,13 +1772,38 @@
  portugal.15.b:0 "They can have it."
 
  #Mexico
- mexico.1.t:0 "Our new president"
- mexico.1.d:0 "The Mexican Elections have come to an end. Our old president, Ignacio Comonfort, will be replaced with the new, conservative president, Felix Maria Zuloaga. There have been fears over tensions between the liberals and the conservatives, which were at an all time high before the elections already, and may now erupt."
- mexico.1.a:0 "This will increase the tensions..."
- mexico.2.t:0 "Civil War!"
- mexico.2.d:0 "The tensions between liberals and conservatives have overboiled in regards to the results of our latest elections! Open fighting has started in our streets, and many deem a civil war unavoidable by this point."
- mexico.2.a:0 "To arms!"
+ mexico.1.t:0 "The Plan of Tacubaya"
+ mexico.1.d:0 "The Plan of Tacubaya was a plan coneived by the conservatives in order to overthrow the new radical Constitution of 1857 that had took away most of the power as well as the influence of both the Catholic Church and the Military. From there, Felix Maria Zuloaga went to join the Plan of Tacubaya."
+ mexico.1.a:0 "Felix Maria Zuloaga announces the plan for support"
+ mexico.2.t:0 "The President's Choice"
+ mexico.2.d:0 "On December the 19th, 1857 the moderately president liberal Ignacio Comonfort was approached by his friend Felix Maria Zuloaga to gain his support on the Plan of Tacubaya which was influential as Ignacio Comonfort did not fully support the Constitution of 1857."
+ mexico.2.a:0 "The president supports the plan"
+ mexico.3.t:0 "The Question about political opponents"
+ mexico.3.d:0 "Upon hearing president Ignacio Comonfort, many of the radical liberals started protesting his actions including Benito Juárez who was next in line for the presidency. If this continues, the radical liberals may stir up more civil unrest within the nation but locking them up would only create more tensions between the parties."
+ mexico.3.a:0 "Start imprisoning political opponents"
+ mexico.4.t:0 "The Question About Civil Unrest"
+ mexico.4.d:0 "Civil unrest has only grown since the start of the lock-ups of radical liberals and tensions have been brewing between Mexico's different parties. It might be time for president Ignacio Comonfort acquire extraordinary powers to enforce the plan but taking a moderate approach should be taken into consideration to avoid any more escalations."
+ mexico.4.a:0 "The president Ignacio Comonfort obtains extraordinary powers"
+ mexico.5.t:0 "Felix Maria Zuloaga Demands Resignation"
+ mexico.5.d:0 "After president Ignacio Comonfort declared his extraordinary powers, many of the supporters of the Plan of Tacubaya started to worry what else he might do. This worry within the plan has forced Felix Maria Zuloaga to demand president Ignacio Comonfort's resignation from his presidency."
+ mexico.5.a:0 "Start to resist the demand and thus the plan"
+ mexico.6.t:0 "The Start of the Reform War"
+ mexico.6.d:0 "After Ignacio Comonfort heard the demand of him resigning his presidency, he started resisting the conservatives by releasing the political opponents in which he had imprisoned. Upon him finishing his release of political opponenets, the freed Benito Juárez went to claim his presidency in Mexico City as the Constitution of 1857 had stated but was then forced to move it to Guanajuato after the conservatives had occupied Mexico City which is the start of the Reform War."
+ mexico.6.a:0 "Support the conservatives"
+ mexico.6.b:0 "Support the liberals"
  MEX_1857_Civilwar:0 "§RA civil war will erupt!§!"
+ mexico_gaa.1.t:0 "A New Candidate"
+ mexico_gaa.1.d:0 "The war has been going on for over a year now and each side has slowly been getting worn down. If we are going to overcome our enemy we are going to need more help. Luckily for us, Leonardo Márquez has shown great promise recently after his victory over over a liberal general in Tacubaya which has allowed our uncontested control over a nearby city."
+ mexico_gaa.1.a:0 "Promote Him"
+ mexico_gaa.2.t:0 "A New Candidate"
+ mexico_gaa.2.d:0 "The Reform War has begun and our nation is split. The Constitution of 1857 should be ended before it does any more damage to the Catholic Church as well as the military. If we want to achieve our goals in a timely manner, we should look for places to gain advantages over our enemy and luckily for us Miguel Miramon has shown great promise in military school and is ready for a promotion into general."
+ mexico_gaa.2.a:0 "Promote Him"
+ mexico_gaa.3.t:0 "A New Candidate"
+ mexico_gaa.3.d:0 "The Reform War has begun and our nation is split. The Constitution of 1857 should be protected at all costs in order to ensure prosperity for the government and its citizens. If we want to achieve our goals in a timely manner, we should look for places to gain advantages over our enemy and luckily for us Leandro Valle Martínez has shown great promise in military school and is ready for a promotion into general."
+ mexico_gaa.3.a:0 "Promote Him"
+ mexico_gaa.4.t:0 "A New Candidate"
+ mexico_gaa.4.d:0 "The Europeans are back in Mexico and our hope is looking grim. If we are to have any chance against these foreign invaders, we are going to need as much help as we can. Luckily for us, the veteran Porfirio Díaz is willing to join our ranks after he had successfully fought in both the Mexican-American war and the Reform war."
+ mexico_gaa.4.a:0 "Promote Him"
 
  #Prussia
  prussia.1.t:0 "A Royal Marriage"
