--- a/toi/localisation/tunisia_l_english.yml
+++ b/toi/localisation/tunisia_l_english.yml
@@ -36,12 +36,12 @@
   TUN_the_marseille_of_the_desert_desc:0 " Tunis needs to be rebuilt "
   
   TUN_industrialize_the_country:0 " Industrialize the Country"
-  TUN_industrialize_the_country:0 " WIP!, FROM HERE I WANT TO START AN OTHER BRANCH "
+  TUN_industrialize_the_country_desc:0 " WIP!, FROM HERE I WANT TO START AN OTHER BRANCH "
 
   TUN_continue_the_reforms:0 " Continue the reforms"
-  TUN_continue_the_reforms:0 " We have to change our social structure once for all"
+  TUN_continue_the_reforms_desc:0 " We have to change our social structure once for all"
 
   TUN_the_constitution:0 " The Constitution"
-  TUN_the_constitution:0 " A modern country needs modern laws"
+  TUN_the_constitution_desc:0 " A modern country needs modern laws"
 
   
