Tunisia pre alpha v 1.1
Tunisia pre alpha v 1.1

--- a/toi/localisation/tunisia_l_english.yml
+++ b/toi/localisation/tunisia_l_english.yml
@@ -44,4 +44,17 @@
   TUN_the_constitution:0 " The Constitution"
   TUN_the_constitution_desc:0 " A modern country needs modern laws"
 
-  
+  TUN_the_old_order:0 " The old order"
+  TUN_the_old_order_desc:0 " changing is dangerous, to secure our supremacy we must destroy the fondamental pact"
+
+  TUN_tunisia_first:0 " Tunisia First"
+  TUN_tunisia_first_desc:0 " Our national interest must come before  "
+
+  TUN_a_help_from_the_empire:0 " Ask help to the Empire"
+  TUN_a_help_from_the_empire_desc:0 " We must be loyal to the Ottoman Empire"
+
+  TUN_in_name_of_Allah:0 " In name of Allah"
+  TUN_the_constitution_desc:0 " Shari'a is the only law we need "
+
+  TUN_eliminate_northern_influence:0 " Eliminate northern influence"
+  TUN_eliminate_northern_influence_desc:0 " France needs to stay out of our business "
