--- a/toi/localisation/events_l_english.yml
+++ b/toi/localisation/events_l_english.yml
@@ -3553,4 +3553,8 @@ algeria_kabylia.1.a:0 "Vive la france!"
 algeria_kabylia.2.t:0 "The Battle of Icheriden"
 algeria_kabylia.2.d:0 "Today our forces have officially met on the battlefield with the Kabyle tribes, most notably the Ait Icheriden tribe, in the fortified village of Icheriden. The local resistance was led by Lalla Fatma N'soummer following the death of her lover in 1854. Despite her successful use of guerilla tactics, her force was beaten down to about 5000 loyal tribesmen throught the 3 years of warfare, and today is the day we shall win this war."
 algeria_kabylia.2.a:0 "Let's goooooooooo"
+#Tunisian events
+tunisia.1.t:0 "Batto Sfez Affair"
+tunisia.1.d:0 "Today Batto Sfez was executed after being sentenced for blasphemy, this event will probably influence our foreign relations. "
+tunisia.1.a:0 "That was just an accident"
 
