Tunisian cultures and victory points

--- a/toi/localisation/state_names_l_english.yml
+++ b/toi/localisation/state_names_l_english.yml
@@ -1010,8 +1010,8 @@
  STATE_1009:0 "Ost-Rhine"
  STATE_1010:0 "South Sudetenland"
  STATE_1011:0 "Lika-Senj"
- STATE_1012:0 "Lendouba"
- STATE_1013:0 "Medinine"
+ STATE_1012:0 "Kasserine"
+ STATE_1013:0 "Medenine"
  STATE_1014:0 "Tataouine"
  STATE_1015:0 "Pyongyang"
  STATE_1016:0 "North Hamgyong"
