--- a/toi/localisation/victory_points_l_english.yml
+++ b/toi/localisation/victory_points_l_english.yml
@@ -1585,5 +1585,11 @@
  VICTORY_POINTS_1960:0 "Al-Fasher"
  VICTORY_POINTS_10917:0 "Agadez"
 
- 
+ VICTORY_POINTS_7005:0 "Gabes"
+ VICTORY_POINTS_11921:0 "Sfax"
+ VICTORY_POINTS_4061:0 "Kasserine"
+ VICTORY_POINTS_11957:0 "Medenine"
+ VICTORY_POINTS_12000:0 "Tataouine"
+ VICTORY_POINTS_7077:0 "Qayrawan"
+
  
