--- a/toi/localisation/tunisia_l_english.yml
+++ b/toi/localisation/tunisia_l_english.yml
@@ -23,4 +23,5 @@
   TUN_the_reformist:0 " The Reformist "
   TUN_the_reformist_desc:0 " Muhammad II is dead, Long live Muhammad III "
 
-  
+  TUN_the_constitution:0 " The Constitution"
+  TUN_the_constitution_desc:0 " A modern country needs modern laws"
