--- a/toi/localisation/events_l_english.yml
+++ b/toi/localisation/events_l_english.yml
@@ -3532,5 +3532,7 @@ algeria_kabylia.2.a:0 "Let's goooooooooo"
 #Tunisian events
 tunisia.1.t:0 "Batto Sfez Affair"
 tunisia.1.d:0 "Today Batto Sfez was executed after being sentenced for blasphemy, this event will probably influence our foreign relations. "
-tunisia.1.a:0 "That was just an accident"
-
+tunisia.1.a:0 "send him to death!"
+tunisia.1.a:0 "that was just an accident!"
+tunisia.2.t:0 "The Fundamenal Pact"
+tunisia.2.d:0 ""
