--- a/toi/localisation/events_l_english.yml
+++ b/toi/localisation/events_l_english.yml
@@ -3604,4 +3604,4 @@ tunisia.1.d:0 "Today Batto Sfez was executed after being sentenced for blasphemy
 tunisia.1.a:0 "send him to death!"
 tunisia.1.a:0 "that was just an accident!"
 tunisia.2.t:0 "The Fundamenal Pact"
-tunisia.2.d:0 ""
+tunisia.2.d:0 "Northern buisnessmen supported by their countries are lobbyng for a new Bill of rights that ensure more trade and religious freedom, it would be a good excuse to reform our country once for all  "
