New SA VPs & State Names

--- a/toi/localisation/state_names_l_english.yml
+++ b/toi/localisation/state_names_l_english.yml
@@ -276,7 +276,7 @@
  STATE_275:0 "Pretoria"
  STATE_276:0 "South Ontario"
  STATE_277:0 "Mexico"
- STATE_278:0 "Pampas"
+ STATE_278:0 "Buenos Aires"
  STATE_279:0 "Santiago"
  STATE_280:0 "Mato Grosso"
  STATE_281:0 "Maldives"
@@ -507,8 +507,8 @@
  STATE_506:0 "Atacama"
  STATE_507:0 "Magallanes"
  STATE_508:0 "Tucuman"
- STATE_509:0 "Buenos Aires"
- STATE_510:0 "Mesopotamia"
+ STATE_509:0 "Buenos Aires City"
+ STATE_510:0 "Santa Fe"
  STATE_511:0 "Mendoza"
  STATE_512:0 "Patagonia"
  STATE_513:0 "Tlemcen"
@@ -751,7 +751,7 @@
  STATE_750:0 "South Kuril Islands"
  STATE_751:0 "Roma"
  STATE_752:0 "Southern Nile"
- STATE_753:0 "Inner Amazonas"
+ STATE_753:0 "Upper Acre"
  STATE_754:0 "Gwalior"
  STATE_755:0 "Rewa"
  STATE_756:0 "Oudh"
@@ -1096,14 +1096,14 @@
  STATE_1095:0 "Tarija"
  STATE_1096:0 "Maldonado"
  STATE_1097:0 "Artigas"
- STATE_1098:0 "Santa Fe"
+ STATE_1098:0 "Chaco Austral"
  STATE_1099:0 "West Formosa"
- STATE_1100:0 "Santiago del Estero"
- STATE_1101:0 "Catamarca"
- STATE_1102:0 "Salta and Jujury"
+ STATE_1100:0 "Puna de Atacama"
+ STATE_1101:0 "Cordoba"
+ STATE_1102:0 "Salta and Jujuy"
  STATE_1103:0 "Neuquen"
  STATE_1104:0 "La Pampa"
- STATE_1105:0 "Olavarria"
+ STATE_1105:0 "Pampa Interior"
  STATE_1106:0 "Yamashiro"
  STATE_1107:0 "Kattowitz"
  STATE_1108:2 "Western Gold Coast"
@@ -1321,7 +1321,7 @@
  STATE_1320:0 "Syrmia "
  STATE_1321:0 "Krakow"
  STATE_1322:0 "Potosi"
- STATE_1323:0 "Amapa"
+ STATE_1323:0 "Oyapokia"
  STATE_1324:0 "Kokura"
  STATE_1325:0 "Cochabamba"
  STATE_1326:0 "State for pings"
@@ -1415,3 +1415,7 @@
  STATE_1415:0 "Perak"
  STATE_1416:0 "Pahang"
  STATE_1417:0 "Selangor"
+ STATE_1418:0 "Lower Acre"
+ STATE_1419:0 "Alto Rio Negro"
+ STATE_1420:0 "Putumayo"
+ STATE_1421:0 "Amazonía"
