--- a/toi/localisation/victory_points_l_english.yml
+++ b/toi/localisation/victory_points_l_english.yml
@@ -678,7 +678,7 @@
  VICTORY_POINTS_650:0 "Santiago"
  VICTORY_POINTS_10400:0 "Pretoria"
  VICTORY_POINTS_10405:0 "Desterro"
- VICTORY_POINTS_8143:0 "São Cristóvão"
+ VICTORY_POINTS_8143:0 "Aracaju"
  VICTORY_POINTS_10998:0 "Maceió"
  VICTORY_POINTS_2111:0 "Cuiabá"
  #VICTORY_POINTS_10959:0 "Campo Grande"
@@ -1167,6 +1167,7 @@
  VICTORY_POINTS_293:0 "Demmin"
  VICTORY_POINTS_3258:0 "Neubrandenburg"
  VICTORY_POINTS_13915:0 "Hagi"
+ VICTORY_POINTS_9320:0 "Ratzeburg"
  VICTORY_POINTS_317:0 "Flensburg"
  VICTORY_POINTS_707:0 "Berchtesgaden"
  VICTORY_POINTS_571:0 "Regensburg"
@@ -1417,7 +1418,7 @@
  VICTORY_POINTS_3272:0 "Marijampole"
  VICTORY_POINTS_6580:0 "Zamość"
  VICTORY_POINTS_12973:0 "Trinidad"
- VICTORY_POINTS_8157:0 "Oruro"
+ VICTORY_POINTS_14007:0 "Oruro"
  VICTORY_POINTS_8211:0 "Riberalta"
  VICTORY_POINTS_8240:0 "Cochabamba"
  VICTORY_POINTS_10924:0 "Santa Cruz"
@@ -1616,6 +1617,34 @@
  VICTORY_POINTS_8035:0 "Atar"
  VICTORY_POINTS_13906:0 "Zouérat"
  VICTORY_POINTS_4954:0 "Bahir Dar"
+ VICTORY_POINTS_5163:0 "Santa Fe"
+ VICTORY_POINTS_8215:0 "Mendoza"
+ VICTORY_POINTS_10999:0 "Vitória"
+ VICTORY_POINTS_12996:0 "Campos dos Goytacazes"
+ VICTORY_POINTS_10980:0 "Niterói"
+ VICTORY_POINTS_12334:0 "Juiz de Fora"
+ VICTORY_POINTS_4617:0 "Jeremoabo"
+ VICTORY_POINTS_10939:0 "Penedo"
+ VICTORY_POINTS_7638:0 "Pelotas"
+ VICTORY_POINTS_14012:0 "Rio Grande"
+ VICTORY_POINTS_14017:0 "Taubaté"
+ VICTORY_POINTS_5112:0 "Santos"
+ VICTORY_POINTS_8190:0 "Cabo Frio"
+ VICTORY_POINTS_14024:0 "Paranaguá"
+ VICTORY_POINTS_2228:0 "Paranaíba"
+ VICTORY_POINTS_5194:0 "Minas do Rio de Contas"
+ VICTORY_POINTS_14026:0 "Cachoeira"
+ VICTORY_POINTS_14026:0 "Santo Amaro"
+ VICTORY_POINTS_14027:0 "Santo Amaro"
+ VICTORY_POINTS_14028:0 "Feira de Santana"
+ VICTORY_POINTS_5182:0 "Caruaru"
+ VICTORY_POINTS_12938:0 "Serro"
+ VICTORY_POINTS_7589:0 "Ponte Nova"
+ VICTORY_POINTS_14032:0 "Queluz"
+ VICTORY_POINTS_14033:0 "Sabará"
+ VICTORY_POINTS_12909:0 "Minas Novas"
+ VICTORY_POINTS_5223:0 "Grão Mogol"
+ VICTORY_POINTS_14034:0 "Rio Pardo"
 
  jungle_hills_desc:0 ""
  
