--- a/toi/localisation/events_l_english.yml
+++ b/toi/localisation/events_l_english.yml
@@ -1,5 +1,15 @@
 ﻿l_english:
  MINIMIZE_EVENT:0 "§GClick§! to Minimize. Event will be placed in the Event Queue under §HEvents and Decisions§!."
+
+#### Flavor Events
+flavor.1.t:0 "Opening of the London Underground"
+flavor.1.d:0 "After roughly 9 years of planning and development, the world's first underground railway has finally been completed and opened for trial in London. The Metropolitan Railway conducted a trial run today, carrying approximately 38,000 passengers between Paddington and Farringdon. The trial succeeded, so much so that the company has already begun planning and development of its next sections within London."
+flavor.1.a:0 "No More Traffic!"
+
+
+
+
+
  #Sepoy
  sepoy.1.t:0 "The Sepoy Mutiny"
  sepoy.1.d:0 "The year is 1857, and our country has suddenly been ripped into an abyss of turmoil and war. Rising conflict between the British East India Company and our people have led to an incident this morning that has sparked a war: A Mutiny in Meerut. Our country is now in a state of war with the company and on both sides mobilization efforts have just begun. Will this be the war that guarantees Freedom for India?"
